antibot user-agent block

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,23 @@
+# Игнорируем все файлы и папки
 *
-!*.*
-!/static/
-!/static/**
 
+# Исключаем все файлы с расширением .txt
+!*.txt
+
+# Исключаем файлы, которые начинаются с blocked_ и имеют расширение .txt
+!blocked_*.txt
+
+# Исключаем папку data
+!data/
+!data/**
+
+# Игнорируем остальные указанные файлы
 *.db
 *.exe
 *.log
-*.txt
 *.zip
 *.json
 *.toml
-
 *.crt
 *.key
-
 *.backup
