--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Игнорируем все файлы и папки
 *
+!.gitignore
 
-# Исключаем все файлы с расширением .txt
+# Исключаем все файлы с расширением .txt .md и лицензию
 !*.txt
+!LICENSE
+!README.md
 
 # Исключаем файлы, которые начинаются с blocked_ и имеют расширение .txt
 !blocked_*.txt
